# bitatui

./: .gitignore  Cargo.toml  README.md  addresses.json  commands.json
src/: cli.rs  file.rs  main.rs  node.rs
