[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
dirs = "4.0"
serde_json = "1.0"
qrcode = "0.14"
bitcoin = "0.32"
arboard = "3"    # for cross-platform clipboard
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
